--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
   ],
   "author": "Mark Bailey",
   "license": "MIT",
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import-newlines": "^1.1.4",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.9.2"
+  },
   "peerDependencies": {
-    "eslint": "^7.32.0",
-    "prettier": "^2.3.2"
+    "eslint": ">=7.32.0"
   }
 }
