--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@markbailey/style-guide",
-  "version": "1.0.0",
+  "name": "@markbailey/eslint-config",
+  "version": "0.0.1",
   "description": "JavaScript/Typescript, React, CSS/SCSS and Code formatting style guide",
   "main": "index.js",
   "files": [
