--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@markbailey/eslint-config",
   "version": "0.0.1",
   "description": "ESLint configuration library",
+  "repository": "git://github.com/markbailey/eslint-config",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "main": "index.js",
   "files": [
     "index.js"
